--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ### Ansible temp file
 *.retry
-
+data/*.yml
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
